[package]
name = "vertex-ai-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
#google-authz = "1.0.0-alpha.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
google-cloud-auth = "0.18.0"
anyhow = "1.0"
jsonwebtoken = "9.2"

rsa = "0.9"
sha2 = "0.10"
base64 = "0.21"
time = { version = "0.3", features = ["formatting"] }
signature = "2.1"
rand = "0.8"
spki = "0.7"
simple_asn1 = "0.6"
num-bigint-dig = "0.8"
lazy_static = "1.4"
yup-oauth2 = "8.3"  # For Google OAuth2 authenticationOAuth2 authentication
hyper = { version = "0.14", features = ["client"] }  # For manual token fetching
http = "0.2"  # For HTTP types


